// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`RichText styles should allow to override normal text 1`] = `
<p>
  <span>
    This is normal text.
  </span>
  <strong>
    This is bold text.
  </strong>
  <em>
    This is italic text.
  </em>
  <u>
    This is underlined text.
  </u>
  <a
    href="https://acme.com"
  >
    <span>
      This is a hyperlink.
    </span>
  </a>
</p>
`;

exports[`RichText styles should render with default styles 1`] = `
<div>
  <h1>
    This is a first-level heading
  </h1>
  <p>
    This is normal text.
    <strong>
      This is bold text.
    </strong>
    <em>
      This is italic text.
    </em>
    <u>
      This is underlined text.
    </u>
    <a
      href="https://acme.com"
    >
      This is a hyperlink.
    </a>
  </p>
  <ul>
    <li>
      <p>
        This is normal text.
        <strong>
          This is bold text.
        </strong>
        <em>
          This is italic text.
        </em>
        <u>
          This is underlined text.
        </u>
        <a
          href="https://acme.com"
        >
          This is a hyperlink.
        </a>
      </p>
    </li>
    <li>
      <p>
        This is normal text.
        <strong>
          This is bold text.
        </strong>
        <em>
          This is italic text.
        </em>
        <u>
          This is underlined text.
        </u>
        <a
          href="https://acme.com"
        >
          This is a hyperlink.
        </a>
      </p>
    </li>
    <li>
      <p>
        This is normal text.
        <strong>
          This is bold text.
        </strong>
        <em>
          This is italic text.
        </em>
        <u>
          This is underlined text.
        </u>
        <a
          href="https://acme.com"
        >
          This is a hyperlink.
        </a>
      </p>
    </li>
  </ul>
  <hr />
  <blockquote>
    <p>
      This is normal text.
      <strong>
        This is bold text.
      </strong>
      <em>
        This is italic text.
      </em>
      <u>
        This is underlined text.
      </u>
      <a
        href="https://acme.com"
      >
        This is a hyperlink.
      </a>
    </p>
  </blockquote>
</div>
`;
